add responsive navbar with animated hamburger menu & breakpoint-based styling

--- a/index.html
+++ b/index.html
@@ -16,16 +16,34 @@
     <header class="header">
       <nav class="header__nav nav">
         <div class="nav__logoBox">
-              <img src="logo.png" alt="GreenThumb Gardening Logo" class="nav__logo logo" />
-        </div>    
+          <img
+            class="nav__logoImg logoImg logoImg--nav"
+            src="public/img/logo/GreenThumbGardeningLogo500X50019Feb2025.png"
+            alt="GreenThumb Gardening Logo"
+          />
+          <div class="nav__logoTextBox logoTextBox">
+            <p class="nav__logoText logoText logoText--heading">
+              <span class="logoText--headingGreen">GreenThumb</span> <br>Gardening Services
+            </p>
+            <p class="nav__logoSlogan logoText logoText--slogan">Your Garden | Our Passion</p>
+          </div>
+        </div>
+
+        <div class="nav__hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="#home">Home</a></li>
-          <li class="nav__item"><a class="nav__link" href="#about">About Us</a></li>
+          <li class="nav__item"><a class="nav__link" href="#about">About</a></li>
           <li class="nav__item"><a class="nav__link" href="#services">Services</a></li>
           <li class="nav__item"><a class="nav__link" href="#prices">Prices</a></li>
-          <li class="nav__item"><a class="nav__link" href="#contact">Contact Us</a></li>
+          <li class="nav__item"><a class="nav__link" href="#contact">Contact</a></li>
         </ul>
       </nav>
+
       <h1>Welcome to GreenThumb Gardening</h1>
       <p>Your trusted gardening and landscaping experts!</p>
     </header>
