add hero section with automatic background slider

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           />
           <div class="nav__logoTextBox logoTextBox">
             <p class="nav__logoText logoText logoText--heading">
-              <span class="logoText--headingGreen">GreenThumb</span> <br>Gardening Services
+              <span class="logoText--headingGreen">GreenThumb</span> <br />Gardening Services
             </p>
             <p class="nav__logoSlogan logoText logoText--slogan">Your Garden | Our Passion</p>
           </div>
@@ -44,8 +44,35 @@
         </ul>
       </nav>
 
-      <h1>Welcome to GreenThumb Gardening</h1>
-      <p>Your trusted gardening and landscaping experts!</p>
+      <section class="hero">
+        <div class="hero__slider">
+          <div class="hero__slide"></div>
+          <div class="hero__slide"></div>
+          <div class="hero__slide"></div>
+          <div class="hero__slide"></div>
+        </div>
+
+        <div class="hero__content">
+          <div class="hero__logoBox">
+            <img class="logoImg logoImg--hero" src="./public/img/logo/GreenThumbGardeningLogo500X50019Feb2025.png" />
+          </div>
+          <div class="hero__logoTextBox">
+            <h1 class="hero__title logoText logoText--heading logoText--headingHero"><span class="logoText--headingGreen logoText--headingGreenHero">GreenThumb</span> <br class="logoText__heroHeadingLineBreak">Gardening Services</h1>
+            <p class="hero__slogan logoText logoText--slogan logoText--sloganHero">Your Your Garden | Our Passion</p>
+            <p class="hero__intro">At GreenThumb Gardening Services, we create and maintain vibrant, healthy gardens with expert care. From lush landscapes to routine garden maintenance, we keep your outdoor spaces thriving year-round. Let’s grow something beautiful together!</p>
+          </div>
+          <div class="hero__cta">
+            <a href="#services" class="hero__btn btn btn--hero">Explore Our Services &rarr;</a>
+          </div>
+        </div>
+
+        <div class="hero__progress">
+          <span class="hero__index"></span>
+          <span class="hero__index"></span>
+          <span class="hero__index"></span>
+          <span class="hero__index"></span>
+        </div>
+      </section>
     </header>
 
     <div class="container">
