implement browser-sync configuration with es modules

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="hero__logoTextBox">
             <h1 class="hero__title logoText logoText--heading logoText--headingHero"><span class="logoText--headingGreen logoText--headingGreenHero">GreenThumb</span> <br class="logoText__heroHeadingLineBreak">Gardening Services</h1>
             <p class="hero__slogan logoText logoText--slogan logoText--sloganHero">Your Your Garden | Our Passion</p>
-            <p class="hero__intro">At GreenThumb Gardening Services, we create and maintain vibrant, healthy gardens with expert care. From lush landscapes to routine garden maintenance, we keep your outdoor spaces thriving year-round. Let’s grow something beautiful together!</p>
+            <p class="hero__intro">At GreenThumb Gardening Services, we create stupid stuff and maintain vibrant, healthy gardens with expert care. From lush landscapes to routine garden maintenance, we keep your outdoor spaces thriving year-round. Let’s grow something beautiful together!</p>
           </div>
           <div class="hero__cta">
             <a href="#services" class="hero__btn btn btn--hero">Explore Our Services &rarr;</a>
@@ -127,6 +127,6 @@
     <footer>
       <p>&copy; 2025 GreenThumb Gardening. All rights reserved.</p>
     </footer>
-    <script src="app.js"></script>
+    <script type="module" src="public/js/app.js"></script>
   </body>
 </html>
