change structure and styling of copyright section in footer

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           />
           <div class="nav__logoTextBox logoTextBox">
             <p class="nav__logoText logoText logoText--heading">
-              <span class="logoText--headingGreen">GreenThumb</span> <br />Gardening Services
+              <span class="logoText--headingGreen">GreenThumb</span> <br>Gardening Services
             </p>
             <p class="nav__logoSlogan logoText logoText--slogan">Your Garden | Our Passion</p>
           </div>
@@ -172,18 +172,26 @@
         <!-- Social Media -->
         <div class="footer__social">
           <a href="#" class="footer__social-link" aria-label="Facebook"
-            ><img src="facebook-icon.png" alt="Facebook" class="footer__social-icon"
-          /></a>
+            ><img class="footer__social-icon" src="facebook-icon.png" alt="Facebook"/>
+          </a>
           <a href="#" class="footer__social-link" aria-label="Instagram"
-            ><img src="instagram-icon.png" alt="Instagram" class="footer__social-icon"
-          /></a>
-          <a href="#" class="footer__social-link" aria-label="Twitter"
-            ><img src="twitter-icon.png" alt="Twitter" class="footer__social-icon"
-          /></a>
+            ><img class="footer__social-icon" src="instagram-icon.png" alt="Instagram"/>
+          </a>
+          <a href="#" class="footer__social-link" aria-label="TikTok"
+            ><img class="footer__social-icon" src="tiktok-icon.png" alt="Tikok"/>
+          </a>
         </div>
 
         <!-- Copyright -->
-        <p class="footer__copy">&copy; <span id="copyrightYear"></span> GreenThumb Gardening. All rights reserved.</p>
+        <p class="footer__copyrightBox">
+          <span class="footer__copyright">
+            <span class="footer__copyrightSymbol">&copy;</span> 
+            <span id="copyrightYear"></span> 
+            <span class="footer__copyrightBusName footer__copyrightBusName--green">GreenThumb</span> 
+            <span class="footer__copyrightBusName footer__copyrightBusName--orange">Gardening Services</span> 
+          </span>
+          <span class="footer__rightsReserved">All rights reserved</span>
+        </p>
 
         <!-- Developer Credit -->
         <div class="footer__dev">
