add social media icons to footer and style it

--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
         </div>
 
         <!-- Social Media -->
-        <div class="footer__social">
-          <a href="#" class="footer__social-link" aria-label="Facebook"
-            ><img class="footer__social-icon" src="facebook-icon.png" alt="Facebook"/>
+        <div class="footer__socialMediaBox">
+          <a href="#" class="footer__socialMediaLink" aria-label="Facebook"
+            ><img class="footer__socialMediaIcon" src="public/img/icons/FacebookIcon500X500.png" alt="social media Facebook icon link"/>
           </a>
-          <a href="#" class="footer__social-link" aria-label="Instagram"
-            ><img class="footer__social-icon" src="instagram-icon.png" alt="Instagram"/>
+          <a href="#" class="footer__socialMediaLink" aria-label="Instagram"
+            ><img class="footer__socialMediaIcon" src="public/img/icons/InstagramIcon500X500.png" alt="social media Instagram icon link"/>
           </a>
-          <a href="#" class="footer__social-link" aria-label="TikTok"
-            ><img class="footer__social-icon" src="tiktok-icon.png" alt="Tikok"/>
+          <a href="#" class="footer__socialMediaLink" aria-label="TikTok"
+            ><img class="footer__socialMediaIcon" src="public/img/icons/TikTokIcon500X500.png" alt="social media Tikok icon link"/>
           </a>
         </div>
 
