change styling of footer logo and nav

--- a/index.html
+++ b/index.html
@@ -135,28 +135,29 @@
 
     <footer class="footer">
       <div class="footer__container">
-        <!-- Logobox & Logotext -->
-        <div class="nav__logoBox">
+        <!-- Footer Logo -->
+        <div class="footer__logoBox footer__logoBox">
           <img
-            class="nav__logoImg logoImg logoImg--nav"
+            class="footer__logoImg logoImg logoImg--footer"
             src="public/img/logo/GreenThumbGardeningLogo500X50019Feb2025.png"
             alt="GreenThumb Gardening Logo"
           />
-          <div class="nav__logoTextBox logoTextBox">
-            <p class="nav__logoText logoText logoText--heading">
+          <div class="footer__logoTextBox logoTextBox">
+            <p class="footer__logoText logoText logoText--heading">
               <span class="logoText--headingGreen">GreenThumb</span> <br />Gardening Services
             </p>
-            <p class="nav__logoSlogan logoText logoText--slogan">Your Garden | Our Passion</p>
+            <p class="footer__logoSlogan logoText logoText--slogan logoText--sloganFooter">Your Garden | Our Passion</p>
           </div>
         </div>
 
-        <!-- Navigation -->
+        <!-- Footer Navigation -->
         <nav class="footer__nav">
-          <ul class="footer__nav-list">
-            <li class="footer__nav-item"><a href="/" class="footer__nav-link">Home</a></li>
-            <li class="footer__nav-item"><a href="/services" class="footer__nav-link">Services</a></li>
-            <li class="footer__nav-item"><a href="/about" class="footer__nav-link">About</a></li>
-            <li class="footer__nav-item"><a href="/contact" class="footer__nav-link">Contact</a></li>
+          <ul class="footer__navList">
+            <li class="footer__navItem"><a class="footer__navLink" href="/">Home</a></li>
+            <li class="footer__navItem"><a class="footer__navLink" href="/about">About</a></li>
+            <li class="footer__navItem"><a class="footer__navLink" href="/services">Services</a></li>
+            <li class="footer__navItem"><a class="footer__navLink" href="/prices">Prices</a></li>
+            <li class="footer__navItem"><a class="footer__navLink" href="/contact">Contact</a></li>
           </ul>
         </nav>
 
