--- a/index.html
+++ b/index.html
@@ -117,18 +117,166 @@
         </section>
       </main>
 
-      <aside>
-        <section id="testimonials">
-          <h2>Testimonials</h2>
-          <p>"GreenThumb transformed my backyard!" - Jane Doe, 45 Palm Street</p>
-          <p>"Excellent service and great prices!" - Mark Smith, 22 Oak Avenue</p>
+      <aside class="sidebar">
+        <section class="sidebar__testimonials testimontials">
+          <div class="testimonials__headingH2Container">
+            <h2 class="testimonials__headingH2 headingH2 headingH2--testimonials">Testimonials</h2>
+            <p class="testimonials__headingH2TagLine headingH2TagLine headingH2TagLine--testimonials">
+              What Our Clients Say
+            </p>
+          </div>
+
+          <div class="testimonials__testimonial testimonial">
+            <img
+              class="testimonial__img"
+              src="public/img/testimonials/GardenReboot064TestimonialPhoto (1).webp"
+              alt="Sarah's garden"
+            />
+
+            <p class="testimonial__paragraph paragraph paragraph--testimonial">
+              "GreenThumb Gardening transformed my backyard! My garden has never looked this vibrant and healthy. Highly
+              recommended!" <br /><span class="testimonial__customer paragraph paragraph--customer"
+                >– Sarah M., Modimolle</span
+              >
+            </p>
+          </div>
+
+          <div class="testimonials__testimonial testimonial">
+            <img
+              class="testimonial__img"
+              src="public/img/testimonials/GardenReboot064TestimonialPhoto (3).webp"
+              alt="David's garden"
+            />
+
+            <p class="testimonial__paragraph paragraph paragraph--testimonial">
+              "Fantastic garden maintenance services! They are professional, friendly, and truly passionate about what
+              they do." <br /><span class="testimonial__customer paragraph paragraph--customer"
+                >– David L., Bela-Bela</span
+              >
+            </p>
+          </div>
+
+          <div class="testimonials__testimonial testimonial">
+            <img
+              class="testimonial__img"
+              src="public/img/testimonials/GardenReboot064TestimonialPhoto (2).webp"
+              alt="Amanda's garden"
+            />
+
+            <p class="testimonial__paragraph paragraph paragraph--testimonial">
+              "Great experience! The team was efficient, and my lawn looks amazing. I’ll definitely use their services
+              again." <br /><span class="testimonial__customer paragraph paragraph--customer"
+                >– Amanda P., Thabazimbi</span
+              >
+            </p>
+          </div>
         </section>
 
-        <section id="contact">
-          <h2>Contact Us</h2>
-          <p>Email: contact@greenthumb.com</p>
-          <p>Phone: 012 345 6789</p>
-          <p>Address: 10 Green Lane, Modimolle</p>
+        <section class="sidebar__contact contact">
+          <div class="contact__headingH2Container">
+            <h2 class="contact__headingH2 headingH2 headingH2--contact">Contact & Social Media</h2>
+            <p class="contact__headingH2TagLine headingH2TagLine headingH2TagLine--contact">
+              Here's how you can get hold of us
+            </p>
+          </div>
+
+          <div class="contact__contactAndSocialMediaBox">
+            <!-- Contact Details -->
+            <div class="contact__contactBox">
+              <div class="contact__headingH3Container">
+                <h2 class="contact__headingH3 headingH3 headingH3--contact">Contact Details</h2>
+                <p class="contact__headingH3TagLine headingH3TagLine headingH3TagLine--contact">
+                  Contact us now for a free quote
+                </p>
+              </div>
+              <p class="contact__contactItem paragraph contact__paragraph--contact">
+                <svg
+                  class="contact__contactItemIcon"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 32 32"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    class="contact__contactItemIconColor"
+                    d="M8.64794 5.66784L9.4226 4.89319C9.9159 4.39989 10.7157 4.39989 11.209 4.89319L14.4752 8.15944C14.9685 8.65274 14.9685 9.45252 14.4752 9.94582L12.2111 12.2099C11.8336 12.5875 11.74 13.1642 11.9788 13.6418C13.3591 16.4024 15.5976 18.6409 18.3582 20.0212C18.8358 20.26 19.4125 20.1664 19.7901 19.7889L22.0542 17.5248C22.5475 17.0315 23.3473 17.0315 23.8406 17.5248L27.1068 20.791C27.6001 21.2843 27.6001 22.0841 27.1068 22.5774L26.3322 23.3521C23.6652 26.019 19.443 26.3191 16.4257 24.0561L14.8992 22.9113C12.6969 21.2595 10.7405 19.3031 9.08872 17.1008L7.94391 15.5743C5.68091 12.557 5.98097 8.33482 8.64794 5.66784Z"
+                  />
+                </svg>
+                <a class="contact__contactLink" href="tel:+014 717 XXXX">014 717 XXXX</a>
+              </p>
+              <p class="contact__contactItem paragraph contact__paragraph--contact">
+                <svg
+                  class="contact__contactItemIcon"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 32 32"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    class="contact__contactItemIconColor"
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M3.00112 12.2143C3 12.4923 3 12.7859 3 13.0963V19.9037C3 22.7775 3 24.2144 3.89278 25.1072C4.78555 26 6.22245 26 9.09626 26H23.3209C26.1947 26 27.6316 26 28.5243 25.1072C29.4171 24.2144 29.4171 22.7775 29.4171 19.9037V13.0963C29.4171 12.7859 29.4171 12.4923 29.416 12.2143L17.1371 18.5224C16.5543 18.8218 15.8628 18.8218 15.28 18.5224L3.00112 12.2143ZM3.07638 10.058C3.20788 10.0678 3.33962 10.1036 3.46429 10.1677L16.2086 16.7149L28.9528 10.1677C29.0775 10.1036 29.2092 10.0678 29.3407 10.058C29.2438 9.06182 29.0237 8.39217 28.5243 7.89278C27.6316 7 26.1947 7 23.3209 7H9.09626C6.22245 7 4.78555 7 3.89278 7.89278C3.39338 8.39217 3.17333 9.06182 3.07638 10.058Z"
+                  />
+                </svg>
+                <a class="contact__contactLink" href="mailto:info@greenthumb.com">info@greenthumb.com</a>
+              </p>
+
+              <p class="contact__contactItem paragraph contact__paragraph--contact">
+                <svg
+                  class="contact__contactItemIcon"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 32 32"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    class="contact__contactItemIconColor"
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M16.7201 26.8583C18.6941 25.773 25.3491 21.6015 25.3491 14.6874C25.3491 9.3372 21.2415 5 16.1746 5C11.1076 5 7 9.3372 7 14.6874C7 21.6015 13.655 25.773 15.629 26.8583C15.9728 27.0472 16.3764 27.0472 16.7201 26.8583ZM16.1745 18.8392C18.3461 18.8392 20.1065 16.9804 20.1065 14.6874C20.1065 12.3945 18.3461 10.5357 16.1745 10.5357C14.003 10.5357 12.2426 12.3945 12.2426 14.6874C12.2426 16.9804 14.003 18.8392 16.1745 18.8392Z"
+                  />
+                </svg>
+                123 Hospitaal Ave, Modimolle 0510
+              </p>
+            </div>
+
+            <!-- Social Media -->
+            <div class="contact__socialMediaBox">
+              <div class="contact__headingH3Container">
+                <h2 class="contact__headingH3 headingH3 headingH3--contact">Social Media</h2>
+                <p class="contact__headingH3TagLine headingH3TagLine headingH3TagLine--contact">
+                  Find and follow us on our Social Media Platforms
+                </p>
+              </div>
+              <div class="contact__socialMediaIconsBox">
+                <a href="#" class="contact__socialMediaLink" aria-label="Facebook"
+                  ><img
+                    class="contact__socialMediaIcon"
+                    src="public/img/icons/FacebookIcon500X500.png"
+                    alt="social media Facebook icon link"
+                  />
+                </a>
+                <a href="#" class="contact__socialMediaLink" aria-label="Instagram"
+                  ><img
+                    class="contact__socialMediaIcon"
+                    src="public/img/icons/InstagramIcon500X500.png"
+                    alt="social media Instagram icon link"
+                  />
+                </a>
+                <a href="#" class="contact__socialMediaLink" aria-label="TikTok"
+                  ><img
+                    class="contact__socialMediaIcon"
+                    src="public/img/icons/TikTokIcon500X500.png"
+                    alt="social media Tikok icon link"
+                  />
+                </a>
+              </div>
+            </div>
+          </div>
         </section>
       </aside>
     </div>
